--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -173,7 +173,42 @@
     "subtitle": "Современные залы в разных районах города",
     "heroTitle": "Спортивные залы",
     "heroSubtitle": "Современные залы с профессиональным оборудованием",
-    "heroDescription": "3 зала в разных районах Кишинева для вашего удобства"
+    "heroDescription": "3 зала в разных районах Кишинева для вашего удобства",
+    "hero": {
+      "badge": "Профессиональные залы",
+      "title": "Наши залы",
+      "subtitle": "Современные залы с профессиональным оборудованием в разных районах Кишинева",
+      "stats": {
+        "facilities": "Зала",
+        "courts": "Кортов",
+        "locations": "Района"
+      }
+    },
+    "filters": {
+      "all": "Все залы",
+      "children": "Детские группы",
+      "adults": "Взрослые группы"
+    },
+    "tags": {
+      "children": "Детские",
+      "adults": "Взрослые"
+    },
+    "moreDetails": "Подробнее",
+    "noGymsFound": "Залы не найдены",
+    "tryChangeFilter": "Попробуйте изменить фильтр",
+    "backToSelection": "Назад к выбору зала",
+    "schedule": {
+      "title": "Расписание"
+    },
+    "pricing": {
+      "title": "Стоимость",
+      "childrenGroups": "Детские группы",
+      "adultGroups": "Взрослые группы",
+      "monthly": "Месячный абонемент",
+      "single": "Разовое занятие",
+      "trial": "Пробное занятие"
+    },
+    "loading": "Загрузка залов..."
   },
   "gallery": {
     "title": "Галерея",
@@ -205,6 +240,16 @@
   "news": {
     "title": "Новости и События",
     "subtitle": "Следите за последними новостями нашего клуба и мировыми событиями в бадминтоне",
+    "hero": {
+      "badge": "Новости и медиа",
+      "title": "Новости и События",
+      "subtitle": "Следите за последними новостями нашего клуба и мировыми событиями в бадминтоне",
+      "stats": {
+        "articles": "Статей",
+        "events": "Событий",
+        "categories": "Категорий"
+      }
+    },
     "categories": {
       "all": "Все",
       "world": "Мировые новости",
