--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -153,6 +153,88 @@
     "heroTitle": "Свяжитесь с нами",
     "heroSubtitle": "Мы всегда готовы ответить на ваши вопросы",
     "heroDescription": "Позвоните, напишите или приходите к нам в любой из наших залов",
+    "hero": {
+      "badge": "Связь с нами",
+      "title": "Свяжитесь с нами",
+      "subtitle": "Мы всегда готовы ответить на ваши вопросы и помочь вам начать тренировки",
+      "stats": {
+        "support": "Поддержка",
+        "locations": "Локации",
+        "response": "Ответ"
+      }
+    },
+    "info": {
+      "address": {
+        "title": "Адрес",
+        "content": "г. Кишинев, ул. Малая Малиан 24\nЗал №1 - основной"
+      },
+      "phone": {
+        "title": "Телефон",
+        "content": "+373 60 123 456\n+373 60 234 567"
+      },
+      "email": {
+        "title": "Email",
+        "content": "info@altius.md\ntraining@altius.md"
+      },
+      "hours": {
+        "title": "Часы работы",
+        "content": "Пн-Пт: 08:00 - 22:00\nСб-Вс: 09:00 - 20:00"
+      },
+      "title": "Полезная информация",
+      "location": {
+        "title": "Выбор зала",
+        "description": "Выберите ближайший к вам зал для удобства тренировок"
+      },
+      "booking": {
+        "title": "Запись на тренировки",
+        "description": "Звоните заранее для записи на групповые и индивидуальные занятия"
+      },
+      "schedule": {
+        "title": "Расписание",
+        "description": "Актуальное расписание всегда доступно по телефону и на сайте"
+      }
+    },
+    "locations": {
+      "badge": "Наши локации",
+      "title": "Где нас найти",
+      "subtitle": "3 современных зала в разных районах Кишинева"
+    },
+    "gyms": {
+      "gym1": {
+        "name": "Зал Малая Малиан",
+        "type": "Основной зал",
+        "badge": "Главный",
+        "address": "ул. Малая Малиан 24",
+        "description": "Основной зал с профессиональным оборудованием",
+        "hours": "Пн-Вс: 08:00 - 22:00"
+      },
+      "gym2": {
+        "name": "Зал 31 августа",
+        "type": "Семейный зал",
+        "badge": "Семейный",
+        "address": "ул. 31 августа 1989, 15",
+        "description": "Зал для семейных тренировок с детской площадкой",
+        "hours": "Пн-Вс: 09:00 - 21:00"
+      },
+      "gym3": {
+        "name": "Зал Ион Крянге",
+        "type": "Премиум зал",
+        "badge": "Премиум",
+        "address": "ул. Ион Крянге 1",
+        "description": "Премиум зал с дополнительными услугами",
+        "hours": "Пн-Вс: 07:00 - 23:00"
+      },
+      "features": {
+        "kids": "Детские группы",
+        "adults": "Взрослые группы",
+        "parking": "Парковка",
+        "playground": "Детская площадка",
+        "cafeteria": "Кафетерий",
+        "advanced": "Продвинутый уровень",
+        "sauna": "Сауна"
+      },
+      "openMap": "Открыть на карте"
+    },
     "phone": "Телефон",
     "email": "Email",
     "address": "Адрес",
